# Building-a-blockchain

./: README.md  main.py
my-project/funcoin/: node.py  pyproject.toml
my-project/funcoin/funcoin/: blockchain.py  connections.py  messages.py  models.py  peers.py  schema.py  server.py  transactions.py
my-project/my_project/: Blockchain.py  connection_pool.py
my-project/my_project/miscellaneous/: assymetric_cryptography.py  async.py  current_price.py  digital_signature.py  echo_server.py  hashing_emails.py  hashing_strings.py  pow.py
